# cacophony

./: .gitignore  .travis.yml  README.md  cabal.config  cacophony.cabal  changelog.md  index.html  package.yaml  stack.yaml
.github/workflows/: haskell.yml
benchmarks/: HandshakeStates.hs  IK.html  IN.html  IX.html  Instances.hs  K.html  KK.html  KN.html  KX.html  Keys.hs  Main.hs  N.html  NK.html  NN.html  NX.html  Types.hs  X.html  XK.html  XN.html  XR.html  XX.html  bench.hs
benchmarks-old/: IK.html  IN.html  IX.html  K.html  NN.html  X.html  XK.html  XX.html
echo-server/: client_key_25519  client_key_25519.pub  client_key_448  client_key_448.pub  keys.tar.bz2  psk  server_key_25519  server_key_25519.pub  server_key_448  server_key_448.pub
examples/echo-client/: Client.hs  Handshake.hs  Main.hs  Options.hs  Parse.hs  Types.hs
examples/echo-server/: Handshake.hs  Handshakes.hs  Keys.hs  Log.hs  Main.hs  Options.hs  Parse.hs  Server.hs  Types.hs
src/Crypto/: Noise.hs
src/Crypto/Noise/: Cipher.hs  Curve.hs  DH.hs  Descriptors.hs  Exception.hs  Handshake.hs  HandshakePatterns.hs  Hash.hs  Internal.hs  MessagePatterns.hs  Types.hs  Validation.hs
src/Crypto/Noise/Cipher/: AESGCM.hs  ChaChaPoly1305.hs
src/Crypto/Noise/Curve/: Curve25519.hs  Curve448.hs
src/Crypto/Noise/DH/: Curve25519.hs  Curve448.hs  Secp256k1.hs
src/Crypto/Noise/Hash/: BLAKE2b.hs  BLAKE2s.hs  SHA256.hs  SHA512.hs
src/Crypto/Noise/Internal/: CipherState.hs  Descriptor.hs  Handshake.hs  HandshakeInterpreter.hs  HandshakePattern.hs  HandshakeState.hs  HandshakeValidation.hs  NoiseState.hs  SymmetricHandshakeState.hs  SymmetricState.hs  Types.hs
src/Crypto/Noise/Internal/Handshake/: Interpreter.hs  Pattern.hs  State.hs  Validation.hs
src/Data/ByteArray/: Extend.hs
tests/: .hlint  .hlint.yaml  CipherState.hs  Handshake.hs  HandshakeState.hs  HandshakeStates.hs  Handshakes.hs  Instances.hs  SymmetricHandshakeState.hs  SymmetricState.hs  Tests.hs  Util.hs  doctests.hs  hlint.hs  properties.hs
tests/HandshakeStates/: C25519CCPSHA256.hs  C25519CCPSHA512.hs
tests/hlint/: hlint.hs
tests/properties/: Imports.hs
tests/secp256k1/: Main.hs  test_wire.patch
tests/vectors/: Generate.hs  HandshakeState.hs  Handshakes.hs  Keys.hs  Main.hs  Types.hs  VectorFile.hs  Verify.hs  vectors.hs
tools/: run_benchmarks.sh  vector_template.jinja
tools/noise-repl/: Client.hs  IO.hs  Main.hs  Options.hs  Pipe.hs  Socket.hs  Types.hs
tools/pretty-print/: Pipfile  format-vectors.py  vector-template.jinja
tools/pretty_print/: format_vectors.py
tools/secp256k1/: Main.hs
vectors/: cacophony.txt
